# fbthrift

thrift/lib/: CMakeLists.txt  setup.py
thrift/lib/python/: CMakeLists.txt  setup.py
